--- a/bus4you/css/main.css
+++ b/bus4you/css/main.css
@@ -467,6 +467,9 @@ a {
   padding: 0 30px;
   margin: 0 auto;
   height: 100%; }
+  @media (max-width: 767px) {
+    .container-wide {
+      padding: 0 10px; } }
 
 section {
   position: relative;
@@ -652,7 +655,7 @@ header {
         display: -ms-flexbox;
         display: flex;
         position: absolute;
-        bottom: -50px;
+        bottom: -60px;
         -webkit-box-orient: horizontal;
         -webkit-box-direction: normal;
         -webkit-flex-direction: row;
@@ -719,7 +722,8 @@ header {
   margin-top: 110px; }
   @media (max-width: 767px) {
     .intro-section {
-      margin-top: 40px; } }
+      margin-top: 40px;
+      height: 100%; } }
   .intro-section .route-map {
     background: url("../img/route-map.png") no-repeat center center;
     -webkit-background-size: cover;
@@ -752,7 +756,9 @@ header {
       -webkit-transform: translateX(-50%);
           -ms-transform: translateX(-50%);
               transform: translateX(-50%);
-      top: 10px; } }
+      top: 3%;
+      width: -webkit-calc(100% - 20px);
+      width: calc(100% - 20px); } }
   #order .row {
     width: 100%;
     height: 30px;
