--- a/B4Y/css/main.css
+++ b/B4Y/css/main.css
@@ -461,7 +461,7 @@ a {
       padding: 0 24px; } }
   @media (max-width: 767px) {
     .container {
-      padding: 0 15px; } }
+      padding: 0 30px; } }
 
 .container-wide {
   width: 100%;
@@ -496,10 +496,10 @@ section {
     font-weight: 400; }
   section .addition {
     width: 100%;
-    text-align: center;
+    text-align: left;
     display: inline-block;
-    position: relative;
-    bottom: -50px;
+    position: absolute;
+    top: 60px;
     font-weight: 400; }
 
 .heading-block {
@@ -507,7 +507,7 @@ section {
   .heading-block h2 {
     font-size: 24px;
     text-transform: uppercase;
-    margin-bottom: 60px;
+    margin-bottom: 80px;
     font-weight: 700;
     color: #333333;
     position: relative; }
@@ -546,6 +546,17 @@ section {
     color: #0099ff;
     text-transform: uppercase; }
 
+@media (max-width: 767px) {
+  .mobile-slider {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    margin: 100px auto 100px;
+    -webkit-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1); } }
+
 .triple-row {
   width: 100%;
   display: -webkit-box;
@@ -581,7 +592,9 @@ section {
     margin-bottom: 20px; }
     @media (max-width: 767px) {
       .triple-row.badges .triple-col {
-        padding-right: 15px; } }
+        padding-right: 15px;
+        width: 100%;
+        padding: 0; } }
     .triple-row.badges .triple-col p {
       margin-bottom: 0; }
       @media (max-width: 767px) {
@@ -1186,11 +1199,13 @@ header {
     border-top: 1px solid #333333;
     margin-top: 20px; }
     #order .total-row .row {
-      -webkit-box-align: baseline;
-      -webkit-align-items: baseline;
-          -ms-flex-align: baseline;
-              align-items: baseline;
-      overflow: visible; }
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      overflow: visible;
+      position: relative;
+      margin-bottom: 20px; }
     #order .total-row #total {
       width: 80px;
       border: 0;
@@ -1202,12 +1217,17 @@ header {
       text-align: right;
       padding-right: 10px;
       color: #333333;
-      height: 30px !important; }
+      height: 30px;
+      overflow: visible;
+      position: absolute;
+      bottom: 3px;
+      right: 22px;
+      z-index: 999;
+      background: #fff; }
     #order .total-row .grn {
       font-size: 14px;
       float: right;
       display: inline-block;
-      margin-bottom: -7px;
       color: #333333; }
     #order .total-row .btn-blue {
       margin-top: -10px; }
@@ -1436,3 +1456,22 @@ footer {
           align-items: center; }
   .social i {
     font-size: 18px; }
+
+.slick-dots {
+  display: -webkit-box !important;
+  display: -webkit-flex !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  position: absolute;
+  bottom: -50px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%); }
+  .slick-dots button {
+    width: 0; }
